# arc

./: .gitignore  .typos.toml  Cargo.toml  LICENSE-BSL  NOTICE  README.md  install.sh
.github/workflows/: build_cpu.yaml  build_cuda_all.yaml  release.yml
arc-cli/: Cargo.toml
arc-cli/src/: main.rs
arc-cuda-graph/: Cargo.toml  build.rs
arc-cuda-graph/src/: autonomous.rs  buffers.rs  decode_forward.rs  dedicated.rs  ffi.rs  gemv_ffi.rs  graph.rs  lib.rs  nongemv_ffi.rs  weights.rs
arc-cuda-graph/src/cuda/: decode_kernels.cu  decode_loop.cu  fused_kernels.cu  gather_rope.cu  gemv_bf16.cu  sampling.cu
arc-engine/: Cargo.toml
arc-engine/src/: lib.rs
arc-turbo/: Cargo.toml
arc-turbo/src/: cache.rs  lib.rs
deploy/: modal_b200.py
docs/: CUDA_GRAPH_PLAN.md  PEAK_INFERENCE.md
mistralrs-cli/src/args/: paged_attn.rs
mistralrs-cli/src/commands/: serve.rs
mistralrs-core/: Cargo.toml
mistralrs-core/src/: device_map.rs  diagnostics.rs  layers.rs  prefix_cacher.rs  sampler.rs  tuning.rs
mistralrs-core/src/kv_cache/: mod.rs  turboquant_cache.rs
mistralrs-core/src/mla/: forward.rs
mistralrs-core/src/models/: deepseek2.rs  deepseek3.rs  gemma.rs  gemma2.rs  glm4.rs  glm4_moe.rs  glm4_moe_lite.rs  gpt_oss.rs  granite.rs  llama.rs  mistral.rs  mixtral.rs  phi2.rs  phi3.rs  phi3_5_moe.rs  quantized_llama.rs  quantized_phi2.rs  quantized_phi3.rs  quantized_qwen.rs  quantized_qwen3.rs  quantized_qwen3_moe.rs  quantized_starcoder2.rs  qwen2.rs  qwen3.rs  qwen3_moe.rs  qwen3_next.rs  smollm3.rs  starcoder2.rs
mistralrs-core/src/paged_attention/: cache_engine.rs  mod.rs
mistralrs-core/src/paged_attention/layers/: mod.rs  paged_attention.rs
mistralrs-core/src/pipeline/: amoe.rs  diffusion.rs  embedding.rs  ggml.rs  gguf.rs  inputs_processor.rs  mod.rs  normal.rs  speculative.rs  speech.rs  vision.rs
mistralrs-core/src/pipeline/loaders/: normal_loaders.rs  vision_loaders.rs
mistralrs-core/src/topology/: mod.rs
mistralrs-core/src/vision_models/gemma3/: mod.rs  text.rs
mistralrs-core/src/vision_models/gemma3n/: mod.rs  text.rs
mistralrs-core/src/vision_models/idefics2/: mod.rs
mistralrs-core/src/vision_models/idefics3/: mod.rs
mistralrs-core/src/vision_models/llama4/: mod.rs  text.rs
mistralrs-core/src/vision_models/llava/: llava15.rs  llava_inputs_processor.rs  llava_next.rs  llava_next_inputs_processor.rs
mistralrs-core/src/vision_models/llava/llava_llm/: llama.rs  mistral.rs  mod.rs
mistralrs-core/src/vision_models/minicpmo/: mod.rs
mistralrs-core/src/vision_models/mistral3/: mod.rs
mistralrs-core/src/vision_models/mllama/: mod.rs
mistralrs-core/src/vision_models/phi3/: mod.rs  phi3_inputs_processor.rs
mistralrs-core/src/vision_models/phi4/: inputs_processor.rs  mod.rs
mistralrs-core/src/vision_models/qwen2_5_vl/: mod.rs
mistralrs-core/src/vision_models/qwen2vl/: mod.rs
mistralrs-core/src/vision_models/qwen3_5/: mod.rs  text.rs
mistralrs-core/src/vision_models/qwen3_5_moe/: mod.rs  text.rs
mistralrs-core/src/vision_models/qwen3_vl/: mod.rs  text.rs
mistralrs-core/src/vision_models/qwen3_vl_moe/: mod.rs  text.rs
mistralrs-core/src/vision_models/voxtral/: mod.rs
mistralrs-core/src/xlora_models/: gemma.rs  gemma2.rs  llama.rs  mistral.rs  mixtral.rs  phi2.rs  phi3.rs  starcoder2.rs
mistralrs-paged-attn/: build.rs
mistralrs-paged-attn/src/cuda/: ffi.rs  mod.rs  turbo_paged_attention.cu  turbo_paged_attention.cuh
mistralrs-paged-attn/src/cuda/backend/: mod.rs  paged_attention.rs
mistralrs-paged-attn/src/metal/kernels/: turbo_paged_attention.metal
mistralrs-pyo3/: mistralrs.pyi
mistralrs-quant/: build.rs
mistralrs-quant/kernels/turboquant/: turbo_wht.cu
mistralrs-quant/src/: lib.rs
mistralrs-quant/src/metal_kernels/: turbo_wht.metal
mistralrs-quant/src/turboquant/: codebook.rs  mod.rs  wht.rs
mistralrs-server-core/src/: mistralrs_for_server_builder.rs
mistralrs/src/: text_model.rs
