[package]
name = "arc-cuda-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "GPU-autonomous decode: zero CPU overhead via CUDA graph WHILE loops"
license = "BSL-1.1"

[dependencies]
candle-core.workspace = true
mistralrs-quant.workspace = true
half.workspace = true
tracing.workspace = true

[build-dependencies]
cudaforge = { workspace = true, optional = true }
anyhow.workspace = true

[features]
cuda = ["dep:cudaforge", "candle-core/cuda"]
